package tpweb.rendezVousService.model;

public enum Statut {
    PROGRAMMÉ,
    ANNULÉ,
    TERMINÉ
}
