package com.ingweb.tp.utilisateurService.model;

public enum Role {
    ADMIN,
    PROFESSIONNEL,
    CLIENT
}
